2009-04-15  vadim  <vadim@vk.crocodile.org>

	* ipcopAdvancedDialog.cpp (ipcopAdvancedDialog::ipcopAdvancedDialog):
	Integration with IPCOP, Endian and OneShield firewall apliances
	(all based on linux/iptables). This sets generate file name to
	"rc.firewall.local", destination directory on the firewall to
	"/etc/rc.d/" and activation command to "/etc/rc.d/rc.firewall
	restart".  Provided resource files for ipcop, endian and oneshield
	platforms and os define default parameters, including path to
	iptables and other command line tools. Generated script performs
	minimal environment setting, because everything is supposed to be
	set up by the aplpiance itself. Iptables commands are put in the
	standard chains INPUT/OUTPUT/FORWARD, with user-defined chans
	created as required. At this time policy and NAT rules work. Rules
	added by fwbuilder are activated by the standard appliance
	firewall script rc.firewall after all IPCOP rules are added and
	before all hooks. This means rules created by fwbuilder do not
	replace rules added by the appliance, but work together with
	those. Prolog and epilog user-defined sections work as
	well. Prolog is always added on top of the rules generated by
	fwbuilder. Prolog and epilog sections can include any kind of
	shell commands, not only iptables rules. Two new firewall
	templates are provided: one for IPCOP/Endian firewall with two
	interfaces (br0 is GREEN and eth1 is RED) and another for the
	appliance with three interfaces (additionally eth2, as ORANGE).

	* ipt.cpp (main): implemented feature request #2454447 "Standard
	options for startup-script". Script generated by fwbuilder now
	accepts standard arguments "start" and "stop". Running the script
	with no argument is equivalent to "start" for backwards
	compatibility. Running script with argument "stop" resets iptables
	tables and chains and sets all to default policy DROP (beware!).

2009-04-11  vadim  <vadim@vk.crocodile.org>
